k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-docker-app
  labels:
    name: my-docker-app
